Atualização do Markdown do curso de Numpy

--- a/NumPy-Lib/numpy-lib.ipynb
+++ b/NumPy-Lib/numpy-lib.ipynb
@@ -5,10 +5,24 @@
    "id": "03305880-ed7f-4d12-8233-1c8bb8797b46",
    "metadata": {},
    "source": [
-    "# NumPy: análise numérica eficiente com Python\n",
-    "- Notebook com todas os códigos, exercícios e aprendizados do curso da biblioteca NumPy da Alura\n",
-    "- Esta biblioteca é voltada para computação numérica e científica, portanto, trabalharemos com objetos do tipo array que servem para realizar operações matemáticas e estatísticas, muito importantes em ciência de dados.\n",
-    "- Ela fornece uma série de vantagens em operações com arrays, que são objetos semelhantes às listas. Entre as vantagens, podemos citar a rapidez das operações, menos memória sendo ocupada e a série de métodos atrelados a esses objetos."
+    "# NumPy: Análise Numérica Eficiente com Python\n",
+    "\n",
+    "## Sumário\n",
+    "- [Introdução](#introdução)\n",
+    "- [Benefícios do NumPy](#benefícios-do-numpy)\n",
+    "- [Objetivos](#objetivos)\n",
+    "\n",
+    "## Introdução\n",
+    "Este notebook contém todos os códigos, exercícios e aprendizados do curso da biblioteca NumPy.\n",
+    "\n",
+    "## Benefícios do NumPy\n",
+    "A biblioteca NumPy é essencial para a computação numérica e científica em Python. Ela permite trabalhar com arrays, que são estruturas de dados eficientes para realizar operações matemáticas e estatísticas, fundamentais em ciência de dados.\n",
+    "\n",
+    "## Objetivos\n",
+    "O NumPy oferece várias vantagens em operações com arrays, como:\n",
+    "- Maior rapidez nas operações\n",
+    "- Menor uso de memória\n",
+    "- Diversos métodos integrados para manipulação e análise de dados\n"
    ]
   },
   {
@@ -1387,7 +1401,7 @@
    "source": [
     "## Motivo da regressão\n",
     "- Temos os valores dessa reta na posição dos meses, de 0 a 80, pulando a cada 20. Mas e se quisermos calcular o preço, conforme a equação da reta, na metade do mês, como em 41.5?\n",
-    "- \r\n",
+    "- \n",
     "Para isso, basta utilizarmos a equação da reta com os coeficientes calculados. Ou seja, por termos ajustado os coeficientes, conseguimos calcular valores intermediários mesmo que eles não estejam no array, nos permitindo fazer uma estimativa de valor."
    ]
   },
